Fixed conversion for instances